--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 			Gridland (v1.1)
 			====================
 			
-			A weird little time-waster from doublespeak games.
+			weird little time-waster from doublespeak games.
 			http://www.doublespeakgames.com
 
 			Code, game design and graphics by Michael Townsend
